--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
     <string name="app_name">tiltok_xsb</string>
 
-    <!-- 点赞选中 -->
+    <!-- 点赞选中/未选中 -->
     <string name="icon_like_fill">&#xe60d;</string>
+    <string name="icon_like_border">&#xe60b;</string>
     <!--评论-->
     <string name="icon_comment">&#xe621;</string>
     <!-- 微博 -->
