--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,9 @@
     <string name="content_pages">内容页面</string>
     <string name="dropdown_menu">下拉菜单</string>
     <string name="dropdown_arrow">下拉箭头</string>
+    <string name="icon_play">&#xe616;</string>
+    <string name="locked">已锁定</string>
+    <string name="video_cover">视频封面</string>
     <!-- 个人信息 -->
     <string name="douyin_id">抖音号: %s</string>
     <string name="age">%s岁</string>
